--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "d3": "^5.16.0",
+    "d3-geo": "^1.12.0",
     "express": "^4.16.4",
     "mongodb": "^3.2.2",
     "puppeteer": "^2.1.1",
