--- a/package.json
+++ b/package.json
@@ -49,12 +49,19 @@
     "d3": "^5.16.0",
     "d3-geo": "^1.12.0",
     "express": "^4.16.4",
+    "file-loader": "^6.0.0",
+    "json-loader": "^0.5.7",
     "mongodb": "^3.2.2",
     "puppeteer": "^2.1.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
     "regenerator-runtime": "^0.13.5",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@hot-loader/react-dom": "^16.13.0+4.12.20"
   }
 }
