node version fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Cov19NYC",
   "version": "1.0.0",
   "engines": {
-    "node": "11.12x",
+    "node": "11.12.x",
     "npm": "6.7.0"
     },
   "description": "Cov19NYC",
