--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,18 @@
 {
-  presets: [
-    [
-      '@babel/preset-env',
-      {
-        modules: false
-      }
-    ],
-    '@babel/preset-react'
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
   ],
-  plugins: [
-    'react-hot-loader/babel'
-  ]
+  "env": {
+    "development": {
+      "plugins": [["react-transform", {
+        "transforms": [{
+          "transform": "react-transform-hmr",
+          "imports": ["react"],
+          "locals": ["module"]
+        }]
+      }]]
+    }
+  }
 }
